[Add & Mod] Description added to 'FastTrustData'. Spacing fixed

--- a/src/Pages/HomePage/FastTrustData.scss
+++ b/src/Pages/HomePage/FastTrustData.scss
@@ -1,5 +1,5 @@
 .FastTrustData {
-    height: 45vh;
+    height: 50vh;
     width: 100vw;
     // background-color: #001122;
     // background-color: #101720;
